# escalapronostica

./: .gitignore  LICENSE  LecturaDatos.py  ModeloXGBoost.py  PresentacionClinica.py  datos.sav  main.py  pyproject.toml
