[project]
name = "escalapronostica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "matplotlib>=3.10.8",
    "pandas<3",
    "pyreadstat>=1.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.19.0",
    "xgboost>3",
]
